tests/fixtures/fail/stdlib/stdlib_net_invalid_stream_vm.walrus
import "std/net" as net;

net.tcp_close(999999);
